--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "setup-professional-backend-project",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/index.js"
   },
   "keywords": [
     "Javascript",
@@ -11,5 +12,8 @@
   ],
   "author": "Neel Patni",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
